--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.2.0",
     "react-paystack": "^6.0.0",
     "react-router-dom": "^7.10.1",
+    "react-to-print": "^3.2.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
